--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 spring.application.name=financeManagerAPI
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
-spring.datasource.username=user
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 spring.mvc.throwExceptionIfNoHandlerFound=true
+
+#Docker Postgres Configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/database
+#spring.datasource.username=user
+#spring.datasource.password=password
+
+# Updated for Session Pooler connection
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.ucsnkdsdonkmemxkgwyd
+spring.datasource.password=nYvdek-fodwu4-jyjtiv
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
