--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ build/
 .vscode/
 
 .DS_Store
+
+### Spring Boot secret application properties ###
+backend/src/main/resources/application-secrets.properties
