--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=classpath:application-secrets.properties
+
 spring.application.name=financeManagerAPI
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
@@ -10,8 +12,6 @@ spring.mvc.throwExceptionIfNoHandlerFound=true
 
 # Updated for Session Pooler connection
 spring.datasource.url=jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.ucsnkdsdonkmemxkgwyd
-spring.datasource.password=nYvdek-fodwu4-jyjtiv
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
