Add ability to update transactions, update transaction service

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,13 +60,14 @@
               "buildTarget": "financeManager:build:production"
             },
             "development": {
-              "buildTarget": "financeManager:build:development"
-            },
-            "options": {
+              "buildTarget": "financeManager:build:development",
               "proxyConfig": "proxy.conf.json"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
